--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "example1": "node .scripts/serve.mjs example/01-html_and_css",
-    "act1": "nodemon -e js,css,html --watch project/01-html_and_css .scripts/serve.mjs project/01-html_and_css"
+    "example1": "nodemon -e js,css,html --watch 01-html_and_css/example .scripts/serve.mjs 01-html_and_css/example",
+    "act1": "nodemon -e js,css,html --watch 01-html_and_css/project .scripts/serve.mjs 01-html_and_css/project"
   },
   "repository": {
     "type": "git",
