--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "example1": "nodemon -e js,css,html --watch 01-html_and_css/example .scripts/serve.mjs 01-html_and_css/example",
-    "act1": "nodemon -e js,css,html --watch 01-html_and_css/project .scripts/serve.mjs 01-html_and_css/project"
+    "example1": "node .scripts/serve.mjs 01-html_and_css/example",
+    "act1": "node .scripts/serve.mjs 01-html_and_css/project"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/jessypouliot98/RPG-learning-to-web#readme",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.16",
+    "connect-livereload": "^0.6.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "express-ws": "^5.0.2",
+    "livereload": "^0.9.3"
   }
 }
