--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "example1": "node .scripts/serve.mjs 01-html_and_css/example",
     "act1": "node .scripts/serve.mjs 01-html_and_css/project",
-    "nocommit1": "node .scripts/serve.mjs 01-html_and_css/.nocommit"
+    "nocommit1": "node .scripts/serve.mjs 01-html_and_css/.nocommit",
+    "act2": "node .scripts/serve.mjs 02-html_css_and_js/project"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,9 @@
   "homepage": "https://github.com/jessypouliot98/RPG-learning-to-web#readme",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/express-ws": "^3.0.4",
     "@types/node": "^20.11.16",
     "connect-livereload": "^0.6.1",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2",
     "livereload": "^0.9.3"
   }
 }
